# yolo_hailo

./: CMakeLists.txt  aliases.txt  package.xml
hailo_yolo/: package.xml  setup.cfg  setup.py
hailo_yolo/hailo_yolo/: function_Huehist.py  yolo.py  yolo_manual.py  yolo_overlay.py  yolo_singlethread.py
hailo_yolo/launch/: hailo_yolo.launch.py
msg/: BoolArray.msg  BoundingBox2P.msg
myPython_test/: hailo_instance_segmentation_degirum.py  hailo_object_detection_degirum.py  hailo_simplified_object_detection_degirum.py
myPython_test/model_zoo/yolov8n_seg/: yolov8n_seg.json
yolo_msgs/msg/: Hue.msg  YoloDetection.msg  YoloDetectionArray.msg
yolo_msgs/srv/: Test.srv
